Correct page gap

--- a/styleexo2.css
+++ b/styleexo2.css
@@ -14,7 +14,9 @@ background: #F5F3E9;
 
 body
 {
+    	overflow-x: hidden;
 	margin: 0px;
+    width: 100vw;
 }
 
 h1
@@ -277,8 +279,6 @@ border-radius:28px;
 .aproposParagraphe
 {
 	display: flex;
-	width: 100%;
-	height:238px;
 	margin-top: 20px;
 	margin-left: 80px;
 	
